<resources>
    <string name="app_name">Financial Aid</string>
    <string name="Loan_Amount">Input Loan Amount (Dollars)</string>
    <string name="Interest_Rate">Input Interest Rate (Percentage)</string>
    <string name="Loan_Term">Input Loan Term (In Years)</string>
    <string name="Loan_Fees">Input Loan Fees (Dollars) </string>
    <string name="Monthly_Payment"> (Monthly Payment Displayed Here) </string>
    <string name="Total_Interest"> (Total Interest Displayed Here) </string>





</resources>