<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Loan_Amount"
        android:textAppearance="@color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/Loan_Amount"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="5"
        android:inputType="number"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="35dp"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Interest_Rate"
        android:textAppearance="@color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/Interest_Rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:layout_marginTop="20dp"
        android:ems="5"
        android:inputType="number"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="35dp"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Loan_Term"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"

        android:textAppearance="@color/black"
        />

    <EditText
        android:id="@+id/Loan_Term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="5"
        android:layout_gravity="center_horizontal"

        android:inputType="number"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="105dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Loan_Fees"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@color/black"
        />


    <EditText
        android:id="@+id/Loan_Fees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="5"
        android:inputType="number"
        android:layout_gravity="center_horizontal"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="140dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Calculate"
        android:layout_gravity="center_horizontal"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="266dp" />

    <TextView
        android:id="@+id/Monthly_Payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Monthly_Payment"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:textAppearance="@color/black"
        />

    <TextView
        android:id="@+id/Total_Interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Total_Interest"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:textAppearance="@color/black"
        />

</LinearLayout>